@@ -1,3 +1,11 @@
+2022-10-17T16:37:42Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3266939945 # 531
+* notice: last 14d: unq all: 3 4
+* notice: prev accum: outdated-unq outdated-all / unq all: 107 151 / 111 156
+* notice: next accum: outdated-unq outdated-all / unq all: 108 152 / 111 156
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-10-03] / []
+
 2022-10-16T08:25:22Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3258811341 # 527
 * notice: last 14d: unq all: 4 5
